# spruyt-labs

./: .envrc  .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  .jsonlintrc  .kilocodeignore  .lycheeignore  .markdownlint.json  .markdownlintignore  .mcp.json  .mdformat.toml  .mega-linter-base.yml  .mega-linter.yml  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .secretlintignore  .shellcheckrc  .sops.yaml  .sourceignore  .trivy-images.yaml  .trivyignore  .trivyignore.yaml  .xfg.json  .yaml-lint.yml  .yamllint.yml  CLAUDE.md  DEVELOPMENT.md  LICENSE  NETWORK-POLICY-PLAN.md  PLAN-grafana-sso.md  PLAN-vaultwarden-sso.md  README.md  TODO.md  Taskfile.yml  biome.json  lint-config.sh  (+3 more)
.claude/: .sync-config.yaml  cclsp.json  hookify.block-git-amend.local.md  hookify.block-git-push.local.md  hookify.block-individual-linters.local.md  hookify.block-issue-close.local.md  hookify.block-talosctl-machineconfig.local.md  hookify.common-block-age-decrypt.local.md  hookify.common-block-base64-decode.local.md  hookify.common-block-branch-without-issue.local.md  hookify.common-block-declare-dump.local.md  hookify.common-block-echo-s3crets.local.md  (+48 more)
cluster/apps/litellm/litellm/app/plugins/chatgpt/: chatgpt_plugin.py  litellm_patch.py  pyproject.toml
cluster/apps/litellm/litellm/app/plugins/chatgpt/tests/: test_chatgpt_plugin.py
cluster/apps/litellm/litellm/app/plugins/hindsight/: hindsight_plugin.py  pyproject.toml
cluster/apps/litellm/litellm/app/plugins/hindsight/tests/: conftest.py  test_hindsight_plugin.py
infra/: README.md  (+1 more)
(+2267 files in other folders)
